--- a/src/assets/styles/pages/_modal.scss
+++ b/src/assets/styles/pages/_modal.scss
@@ -2,6 +2,9 @@
   padding:30px;
   min-width: 600px;
   border-radius: 10px;
+  @media (max-width:1024px){
+    min-width:inherit;
+  }
 
   .modal-body {
     padding:25px 0;
@@ -50,6 +53,10 @@
       line-height: 45px;
       min-width:150px;
       border: 1px solid;
+      @media (max-width:450px){
+        width:100%;
+        margin: 5px 0!important;
+      }
 
       &.btn-outline{
         border-color: $light-blue;
