--- a/src/assets/styles/pages/_onboarding.scss
+++ b/src/assets/styles/pages/_onboarding.scss
@@ -21,12 +21,21 @@
 		width:100%;
 		padding:0;
 	}
+	@media (min-width:768px) and  (max-width:1099px){
+		padding: 50px 40px;
+		width:50%;
+	}
+
 
 	img{
 		@media (max-width:767px){
 			width:238px;
 			height:201px;
 			margin: 20px auto;
+		}
+
+		@media (min-width:768px) and  (max-width:1099px){
+			max-width:350px;
 		}
 	}
 	.logo {
@@ -77,6 +86,10 @@
 		padding:30px 20px;
 		align-items: flex-start;
 	}
+	@media (min-width:768px) and  (max-width:1099px){
+		width:50%;
+		padding: 50px 40px;
+	}
 	.user-form-inner {
     width: 100%;
     text-align: left;
@@ -102,7 +115,11 @@
 			right: 100px;
 			cursor: pointer;
 			@media (max-width:767px){
-				display: none;
+				right:20px;
+				top:40px;
+			}
+			@media (min-width:768px) and  (max-width:1099px){
+				right:40px;
 			}
 		}
 
