--- a/src/assets/styles/pages/_web-footer.scss
+++ b/src/assets/styles/pages/_web-footer.scss
@@ -2,11 +2,16 @@
 footer{
   padding: 20px 0 30px 0;
   background: $navy-blue2;
+  @media(max-width:575px){
+    text-align: left;
+    padding: 20px 30px 30px 30px;
+
+  }
 
   .social-links{
     margin-bottom: 20px;
     a{
-      margin: 0 10px;
+      margin: 0 20px 0 0;
    
     }
   }
