--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -22,6 +22,7 @@ $light-purple: #57607f;
 $red: #d50000;
 $red1: #ea6868;
 $green: #45b69f;
+$green1: #3bc09c;
 $light-blue: #2499d6;
 $light-blue1: #74b5e5;
 $light-blue2: #e6f0f7;
