--- a/src/assets/styles/pages/_modal.scss
+++ b/src/assets/styles/pages/_modal.scss
@@ -3,7 +3,7 @@
   min-width: 600px;
   border-radius: 10px;
   @media (max-width:1024px){
-    min-width:inherit;
+    min-width:auto;
   }
 
   .modal-body {
