culture calendar event category section ui fixes

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -49,6 +49,13 @@ $watermar-white: #F0F9FF;
  $blue-bayoux: #4c5f82;
  $old-gold: #c5a932;
  $tuscany: #bf6229;
+
+ //event category color code
+ $holidays: #72cfa0;
+ $sports: #009cdc;
+ $festivals: #004d63;
+ $music: #edc81b;
+
  
  //SIZES
  $font-10:   10px;
