--- a/src/assets/styles/pages/_web-header.scss
+++ b/src/assets/styles/pages/_web-header.scss
@@ -8,6 +8,11 @@ padding: 10px 0;
   background: $white;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.05);
   padding: 0;
+  position: fixed;
+  top:0;
+  left:0;
+  z-index: 123;
+  width:100%;
 }
 
 .container{
@@ -41,6 +46,9 @@ padding: 10px 0;
       @media (max-width:991px){
         padding-top:30px;
         height:100vh;
+        overflow: auto;
+        padding-bottom: 100px;
+        
       }
       @media (max-width:1199px){
         margin-left: 10px;
@@ -214,6 +222,7 @@ padding: 10px 0;
   transition: 0.4s all ease-in-out;
   &.navbar-toggler-icon1{
     background:url(../../images/menu-close.png) no-repeat!important;
+
   }
 }
 .collapse{
