calendar ui fixes

--- a/src/assets/styles/pages/_calendar.scss
+++ b/src/assets/styles/pages/_calendar.scss
@@ -228,7 +228,8 @@ table{
       a{
         margin: 0;
         padding:10px 15px!important;
-        box-shadow: 0px 0px 34px rgba(255,255,255,0.4);
+        box-shadow: 0px 0px 4px rgba(255,255,255,0.4);
+        border-radius:0;
       }
 
       .fc-content{
