--- a/src/assets/styles/pages/_calendar.scss
+++ b/src/assets/styles/pages/_calendar.scss
@@ -113,6 +113,14 @@
   color: #000;
   font-size:$font-14!important;
   font-family:  $source-semibold;
+
+  span{
+    @media (max-width:575px){
+      display: inline-block;
+      width: 40px;
+      margin: auto;
+    }
+  }
   @media (max-width:767px){
     border: 0;
   }
@@ -147,6 +155,23 @@ table{
       text-align: center;
   
       
+    }
+
+    &.fc-more-cell{
+      .fc-more{
+        font-family: $source-semibold;
+        font-size:$font-13;
+        color: $navy-blue;
+        padding-top: 10px;
+        display: inherit;
+        line-height: normal;
+        @media (max-width:575px){
+          font-size:$font-12;
+        }
+        &:hover{
+          text-decoration:none;
+        }
+      }
     }
    
   }
@@ -220,16 +245,15 @@ table{
     }
 
     .fc-event-container{
-      padding: 0;
+      padding: 10px;
       max-height: 500px;
       overflow: auto;
       font-family: $source-regular;
 
       a{
-        margin: 0;
+        margin: 0 0 10px 0;
         padding:10px 15px!important;
-        box-shadow: 0px 0px 4px rgba(255,255,255,0.4);
-        border-radius:0;
+        border-radius:10px;
       }
 
       .fc-content{
