add show more and less more event - VOWWEB-284

--- a/src/assets/styles/pages/_onboarding.scss
+++ b/src/assets/styles/pages/_onboarding.scss
@@ -428,6 +428,13 @@ position: relative;
 .ui-hide {
 	display: none;
 }
+.show-more {
+	cursor: pointer;
+}
+.hide-more {
+	cursor: pointer;
+}
+
 
 
 
