calender ui update

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -55,6 +55,9 @@ $watermar-white: #F0F9FF;
  $sports: #009cdc;
  $festivals: #004d63;
  $music: #edc81b;
+ $food: #00C1AD;
+ $art: #7168B6;
+ $others: #642353;
 
  
  //SIZES
