--- a/src/assets/styles/pages/_calendar.scss
+++ b/src/assets/styles/pages/_calendar.scss
@@ -1,4 +1,6 @@
 .fc{
+  position: relative;
+    z-index: 12;
 
 .fc-toolbar{
   &.fc-header-toolbar{
@@ -163,10 +165,13 @@ table{
         font-size:$font-13;
         color: $navy-blue;
         padding-top: 10px;
+        padding-left:5px;
         display: inherit;
         line-height: normal;
         @media (max-width:575px){
           font-size:$font-12;
+          width: 40px;
+          margin: auto;
         }
         &:hover{
           text-decoration:none;
@@ -193,6 +198,8 @@ table{
     .fc-day-grid-event{
       color:$white!important;
       padding: 0 10px!important;
+      border-radius: 0;
+    margin: 2px 0;
 
       .fc-title{
        font-size:$font-12;
@@ -253,7 +260,7 @@ table{
       a{
         margin: 0 0 10px 0;
         padding:10px 15px!important;
-        border-radius:10px;
+        border-radius:8px;
       }
 
       .fc-content{
@@ -307,10 +314,15 @@ table{
         }
 
         .show-more, .hide-more{
-        font-family:$source-semibold;
-        color: $black;
+        font-family:$source-bold;
+        color: $white;
+        text-decoration:underline;
         display: block;
-        padding:5px!important;
+        padding:5px 0!important;
+        
+        &.ui-hide{
+          display: none;
+        }
        
         }
       }
