--- a/src/assets/styles/pages/_landing-page.scss
+++ b/src/assets/styles/pages/_landing-page.scss
@@ -162,10 +162,15 @@
       max-width:50%;
       top: 120px;
     }
+
+    @media (min-width:1100px) and (max-width:1299px){
+      max-width:60%;
+    }
     
     
 
     img{
+      max-width:100%;
 
       @media (max-width:575px){
         max-width:315px;
