--- a/src/assets/styles/pages/_web-header.scss
+++ b/src/assets/styles/pages/_web-header.scss
@@ -39,6 +39,12 @@ padding: 10px 0;
       @media (max-width:991px){
         margin-top: 60px;
       }
+
+      .dropdown-menu-right{
+        @media (max-width:991px){
+          margin-bottom: 80px;
+        }
+      }
     }
 
     .navbar-collapse{
@@ -46,9 +52,7 @@ padding: 10px 0;
       @media (max-width:991px){
         padding-top:30px;
         height:100vh;
-        overflow: auto;
-        padding-bottom: 100px;
-        
+        overflow: auto;        
       }
       @media (max-width:1199px){
         margin-left: 10px;
@@ -164,6 +168,7 @@ padding: 10px 0;
         }
   
       }
+
     }
   }
   .caret{
@@ -184,6 +189,9 @@ padding: 10px 0;
 
   
 .header-signup-section{
+  @media (max-width:991px){
+    margin-bottom: 60px;
+  }
 
   a{
 
