--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -50,6 +50,19 @@ $watermar-white: #F0F9FF;
  $old-gold: #c5a932;
  $tuscany: #bf6229;
 
+
+  //search keyword color
+  $color_1: #83c79d;
+  $color_2: #42bead;
+  $color_3: #2499d6;
+  $color_4: #5e58a0;
+  $color_5: #f6d54c;
+  $color_6: #084c61;
+  $color_7: #57e2e5;
+  $color_8: #5c2751;
+  $color_9: #34435e;
+  $color_10: #dd7230;
+
  //event category color code
  $holidays: #72cfa0;
  $sports: #009cdc;
