--- a/src/assets/styles/pages/_landing-page.scss
+++ b/src/assets/styles/pages/_landing-page.scss
@@ -93,9 +93,9 @@
       border-left: 3px solid $theme-blue;
       border-right: 0;
       padding:5px 13px;
-      font-size: $font-16;
+      font-size: $font-21;
         font-family:  $source-regular;
-        color: $navy-blue-light1;
+        color: $navy-blue;
         @media (max-width:767px){
           height: 41px;
           line-height: 41px;
@@ -516,7 +516,7 @@ img{
       justify-content: space-between;
       align-items: center;
       @media (max-width:767px){
-        justify-content: center;
+        justify-content: space-between;
       }
       a{ font-size:$font-16;
         color:$white;
@@ -534,8 +534,8 @@ img{
 
         @media (max-width:767px){
           font-size:$font-12;
-          margin: 9px;
-          width: calc(50% - 18px);
+          margin: 9px 0;
+          width: calc(50% - 9px);
           height: 41px;
           padding:6px;
         }
@@ -805,7 +805,7 @@ img{
   
     }
     @media (max-width:1099px){
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
     a{
       font-size: $font-16;
@@ -850,6 +850,7 @@ img{
     @media (max-width:767px){
       margin-left: -10px;
       margin-right: -10px;
+      margin-bottom:20px;
       width: calc(100% + 20px);
     }
     div{
