--- a/src/assets/styles/pages/_onboarding.scss
+++ b/src/assets/styles/pages/_onboarding.scss
@@ -330,13 +330,14 @@
 
 	}
 	label {
-		position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-		left: 15px;
 		font-size: $font-15;
 		color: $navy-blue-light;
     font-family: $source-regular;
+		position: absolute;
+		z-index: 1;
+		top: 50%;
+		left: 15px;
+    transform: translateY(-50%);
     transition: 0.2s all ease-in-out;
   }
   
@@ -506,3 +507,9 @@ button{
 	}
 }
 
+
+
+
+.form-control[readonly]{
+	background: $white;
+}
