--- a/src/assets/styles/pages/_onboarding.scss
+++ b/src/assets/styles/pages/_onboarding.scss
@@ -160,7 +160,7 @@
 		padding: 50px 40px;
 	}
 	.user-form-inner {
-    width: 100%;
+		width: 100%;
     text-align: left;
 		h2 {
 			font-size: $font-36;
@@ -266,6 +266,19 @@
 				line-height: 1.5;
 				margin-left: auto;
 				margin-right: auto;
+
+				&.resend-email{
+					a{
+			
+						font-size: $font-18;
+						font-family:$source-semibold;
+						color:$light-blue;
+						text-decoration: underline;
+						@media (max-width:991px){
+							display: block;
+						}
+					}
+				}
 			}
 
 			.icon-success{
@@ -506,3 +519,7 @@ button{
 	}
 }
 
+.maxwidth-370{
+	max-width:370px;
+	margin: auto;
+}
