--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -38,18 +38,6 @@ $watermar-blue: #E2F3FF;
 $watermar-white: #F0F9FF;
 
 
- //explore chart color
- $aqua-forest: #5FA47A;
- $tiber: #0A2D38;
- $lochinvar: #2F9480;
- $turquoise-blue: #57E2E5;
- $matisse: #1977a8;
- $wine-berry: #36112e;
- $minsk: #3f3982;
- $blue-bayoux: #4c5f82;
- $old-gold: #c5a932;
- $tuscany: #bf6229;
-
 
   //search keyword color
   $color_1: #83c79d;
@@ -64,13 +52,14 @@ $watermar-white: #F0F9FF;
   $color_10: #dd7230;
 
  //event category color code
- $holidays: #72cfa0;
- $sports: #009cdc;
- $festivals: #004d63;
- $music: #edc81b;
- $food: #00C1AD;
- $art: #7168B6;
- $others: #642353;
+ $holidays: #2dd351;
+ $sports: #5cb2eb;
+ $festivals: #f58f2c;
+ $music: #ffe200;
+ $food: #74d5bd;
+ $art: #f3aaf8;
+ $dance : #c604d6;
+ $others: #847de3;
 
  
  //SIZES
