--- a/src/assets/styles/pages/_landing-page.scss
+++ b/src/assets/styles/pages/_landing-page.scss
@@ -549,44 +549,44 @@ img{
         }
   
         &.holi{
-          border-color: $aqua-forest;
-          background: rgba($color: $aqua-forest, $alpha: 0.8);
+          border-color: #32bd55;
+          background: #2ed351;
         }
         &.herring{
-          border-color: $tiber;
-          background: rgba($color: $tiber, $alpha: 0.8);
+          border-color: #ab04b9;
+          background: #c603d6;
         }
         &.hogmanay{
-          border-color: $lochinvar;
-          background: rgba($color: $lochinvar, $alpha: 0.8);
+          border-color: #74c1bd;
+          background: #74d5bd;
         }
         &.donauinselfest{
-          border-color:  $turquoise-blue;
-          background: rgba($color:  $turquoise-blue, $alpha: 0.8);
+          border-color: #4579bd;
+          background: #458dbd;
         }
         &.carnevale{
-          border-color: $matisse;
-          background: rgba($color: $matisse, $alpha: 0.8);
+          border-color: #5c9eeb;
+          background: #5cb2eb;
         }
         &.primavera{
-          border-color: $wine-berry;
-          background: rgba($color:  $wine-berry, $alpha: 0.8);
+          border-color: #5e4692;
+          background: #5e5a92;
         }
         &.let-it-roll{
-          border-color: $minsk;
-          background: rgba($color:  $minsk, $alpha: 0.8);
+          border-color: #8b71e5;
+          background: #847de3;
         }
         &.soccer{
-          border-color: $blue-bayoux;
-          background: rgba($color: $blue-bayoux, $alpha: 0.8);
+          border-color: #f57c2c;
+          background: #f5902c;
         }
         &.becon{
-          border-color:  $old-gold;
-          background: rgba($color:  $old-gold, $alpha: 0.8);
+          border-color: #ffce00;
+          background: #ffe200;
         }
         &.tabletennis{
-          border-color: $tuscany;
-          background: rgba($color:  $tuscany, $alpha: 0.8);
+          border-color: #f396f8;
+          background: #f3aaf8;
         }
   
         &:hover{
