--- a/src/assets/styles/pages/_landing-page.scss
+++ b/src/assets/styles/pages/_landing-page.scss
@@ -1318,3 +1318,13 @@ margin:50px 0;
   text-transform: capitalize;
 }
 
+.ui-evt-close {
+  position: absolute;
+  cursor: pointer;
+  top: 10px;
+  right: 20px;
+}
+
+.event-detail-modal {
+  margin-top: 150px;  
+}
