--- a/src/assets/styles/pages/_landing-page.scss
+++ b/src/assets/styles/pages/_landing-page.scss
@@ -1326,5 +1326,14 @@ margin:50px 0;
 }
 
 .event-detail-modal {
-  margin-top: 150px;  
+  margin-top: 100px;  
+}
+
+.ui-break-all {
+  word-break: break-all;
+}
+
+.ui-evt-content {
+  max-height: 300px;
+  overflow: auto;
 }
