--- a/src/assets/styles/pages/_landing-page.scss
+++ b/src/assets/styles/pages/_landing-page.scss
@@ -1337,3 +1337,12 @@ margin:50px 0;
   max-height: 300px;
   overflow: auto;
 }
+
+.ui-map-icon {
+  padding-right: 5px;
+}
+
+.mb20 {
+  margin-bottom: 20px;
+}
+
