Resolve keyword colors

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,11 +2,11 @@
  * Colors
  */
  
- $white: #ffffff;
- $black: #000;
- $off-white: #fbfeff;
- $off-white2: #f6fafc;
- $off-white3: #f6fbff;
+$white: #ffffff;
+$black: #000;
+$off-white: #fbfeff;
+$off-white2: #f6fafc;
+$off-white3: #f6fbff;
 $theme-color-light: #f0f9ff;
 $navy-blue: #272f56;
 $navy-blue1: #3a476d;
@@ -40,16 +40,16 @@ $watermar-white: #F0F9FF;
 
 
   //search keyword color
-  $color_1: #83c79d;
-  $color_2: #42bead;
-  $color_3: #2499d6;
-  $color_4: #5e58a0;
-  $color_5: #f6d54c;
-  $color_6: #084c61;
-  $color_7: #57e2e5;
-  $color_8: #5c2751;
-  $color_9: #34435e;
-  $color_10: #dd7230;
+  $color_1: #2ed351;
+  $color_2: #c603d6;
+  $color_3: #74d5bd;
+  $color_4: #458dbd;
+  $color_5: #5cb2eb;
+  $color_6: #5e5a92;
+  $color_7: #847de3;
+  $color_8: #f5902c;
+  $color_9: #ffe200;
+  $color_10: #f3aaf8;
 
  //event category color code
  $holidays: #2dd351;
