--- a/src/assets/styles/pages/_calendar.scss
+++ b/src/assets/styles/pages/_calendar.scss
@@ -337,62 +337,63 @@ table{
 
 
 
+@media (min-width: 767px) {
+  .fc-dayGridWeek-view{
 
-.fc-dayGridWeek-view{
+    .fc-event-container{
+    }
 
-  .fc-event-container{
-  }
+    .fc-day-grid-event{
+      min-height:120px;
+      margin: 0.5px 0!important;
+      .fc-content {
+        white-space: normal!important;
+        padding:10px 3px;
 
-  .fc-day-grid-event{
-    min-height:120px;
-    margin: 0.5px 0!important;
-    .fc-content {
-      white-space: normal!important;
-      padding:10px 3px;
-
-      .fc-title{
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-        display: inherit;
-      }
-
-      .fc-description{
-        display: block!important;
-        margin-top: 8px;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-      }
-      .fc-location{
-        display: block!important;
-        font-size: 14px;
-        margin-top: 5px;
-        padding-left: 22px;
-        position: relative;
-
-        &:before{
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: url(../../images/icon-map.png) no-repeat;
-        width: 13px;
-        height: 17px;
+        .fc-title{
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
+          display: inherit;
         }
-      }
-      .show-more, .hide-more{
-        font-family:$source-bold;
-        color: $white;
-        text-decoration:underline;
-        display: block;
-        padding:5px 0!important;
+
+        .fc-description{
+          display: block!important;
+          margin-top: 8px;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
+        }
+        .fc-location{
+          display: block!important;
+          font-size: 14px;
+          margin-top: 5px;
+          padding-left: 22px;
+          position: relative;
+
+          &:before{
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: url(../../images/icon-map.png) no-repeat;
+          width: 13px;
+          height: 17px;
+          }
+        }
+        .show-more, .hide-more{
+          font-family:$source-bold;
+          color: $white;
+          text-decoration:underline;
+          display: block;
+          padding:5px 0!important;
+          
+          &.ui-hide{
+            display: none;
+          }
         
-        &.ui-hide{
-          display: none;
-        }
-       
-        }
+          }
+      }
     }
   }
 }
